--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+twisted-web (11.1.0-1pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 25 Dec 2013 04:58:17 +0000
+
 twisted-web (11.1.0-1) unstable; urgency=low
 
   * New upstream version.
